# durak

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py  conanfile.txt
durak/: CMakeLists.txt  card.cxx  card.hxx  constant.hxx  game.cxx  game.hxx  gameData.hxx  gameOption.hxx  move.hxx  player.cxx  player.hxx  print.cxx  print.hxx
test/: CMakeLists.txt  constant.hxx  game.cxx  main.cxx  move.cxx  player.cxx
